--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "chart.js": "^4.5.0",
     "feather-icons": "^4.29.2",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.4.0",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
