--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:api": "json-server --watch ./server/db.json --routes ./server/routes.json --port 3001"
   },
   "dependencies": {
+    "@primevue/themes": "^4.4.1",
     "chart.js": "^4.5.0",
     "feather-icons": "^4.29.2",
+    "json-server": "^0.17.4",
+    "pinia": "^3.0.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primevue": "^4.4.0",
+    "primevue": "^4.4.1",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
