--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:api": "json-server --watch ./server/db.json --routes ./server/routes.json --port 3001"
   },
   "dependencies": {
+    "@primevue/themes": "^4.4.1",
     "chart.js": "^4.5.0",
     "feather-icons": "^4.29.2",
+    "json": "^11.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.0",
@@ -19,6 +22,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "json-server": "^0.17.4",
     "vite": "npm:rolldown-vite@7.1.12"
   },
   "overrides": {
