--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@primevue/themes": "^4.4.1",
     "chart.js": "^4.5.0",
     "feather-icons": "^4.29.2",
-    "json-server": "^0.17.4",
+    "json": "^11.0.0",
     "pinia": "^3.0.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "json-server": "^0.17.4",
     "vite": "npm:rolldown-vite@7.1.12"
   },
   "overrides": {
