--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "dev:api": "json-server --watch ./server/db.json --routes ./server/routes.json --port 3001"
+    "dev:api": "json-server --watch ./server/db.json --routes ./server/routes.json --port 3001",
+    "deplo": "gh-pages -d dist"
   },
   "dependencies": {
     "@primevue/themes": "^4.4.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "gh-pages": "^6.3.0",
     "json-server": "^0.17.4",
     "vite": "npm:rolldown-vite@7.1.12"
   },
