--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "dev:api": "json-server --watch ./server/db.json --routes ./server/routes.json --port 3001"
+    "dev:api": "json-server --watch ./server/db.json --routes ./server/routes.json --port 3001",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@primevue/themes": "^4.4.1",
