--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VITE_ENERGIX_API_URL="http://localhost:3001/api/v1"
+VITE_ENERGIX_API_URL="https://frontend-energix.onrender.com"
 
 VITE_AUTH_ENDPOINT_PATH="/auth"
 VITE_USERS_ENDPOINT_PATH="/users"
