--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_ENERGIX_API_URL="https://frontend-energix.onrender.com"
+VITE_API_BASE_URL="https://frontend-energix.onrender.com"
 
 VITE_AUTH_ENDPOINT_PATH="/auth"
 VITE_USERS_ENDPOINT_PATH="/users"
