--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@primevue/themes": "^4.4.1",
     "chart.js": "^4.5.0",
     "feather-icons": "^4.29.2",
+    "i18n": "^0.15.3",
     "json": "^11.0.0",
     "pinia": "^3.0.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.0",
     "vue": "^3.5.21",
+    "vue-i18n": "^11.1.12",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
