--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VITE_ENERGIX_API_URL="http://localhost:3000/api/v1"
+VITE_API_BASE_URL="http://localhost:3000/api/v1"
 
 VITE_AUTH_ENDPOINT_PATH="/auth"
 VITE_USERS_ENDPOINT_PATH="/users"
