--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "dev:api": "json-server --watch ./server/db.json --routes ./server/routes.json --port 3001",
-    "deplo": "gh-pages -d dist"
+    "dev:api": "json-server --watch ./server/db.json --routes ./server/routes.json --port 3001"
   },
   "dependencies": {
     "@primevue/themes": "^4.4.1",
     "chart.js": "^4.5.0",
     "feather-icons": "^4.29.2",
+    "i18n": "^0.15.3",
     "json": "^11.0.0",
     "pinia": "^3.0.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primevue": "^4.4.1",
+    "primevue": "^4.4.0",
     "vue": "^3.5.21",
+    "vue-i18n": "^11.1.12",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "gh-pages": "^6.3.0",
     "json-server": "^0.17.4",
     "vite": "npm:rolldown-vite@7.1.12"
   },
