--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_ENERGIX_API_URL="https://backend-energix.onrender.com"
+VITE_API_BASE_URL="https://backend-energix.onrender.com/api/v1"
 
-VITE_AUTH_ENDPOINT_PATH="/auth"
+VITE_AUTH_ENDPOINT_PATH="/authentication"
 VITE_USERS_ENDPOINT_PATH="/users"
 VITE_CODES_ENDPOINT_PATH="/codes"
 VITE_CODES_CHECK_PATH="/codes"
