--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL="https://backend-energix.onrender.com/api/v1"
+VITE_API_BASE_URL="http://localhost:5045/api/v1"
 
 VITE_AUTH_ENDPOINT_PATH="/authentication"
 VITE_USERS_ENDPOINT_PATH="/users"
@@ -6,4 +6,5 @@ VITE_CODES_ENDPOINT_PATH="/codes"
 VITE_CODES_CHECK_PATH="/codes"
 VITE_DEVICES_ENDPOINT_PATH="/devices"
 VITE_ZONES_ENDPOINT_PATH="/zones"
-
+VITE_PERSONALIZATION_ENDPOINT_PATH="/personalization"
+VITE_SUSCRIPTION_PATH="/suscription"
