chore: add end-of-file comments for clarity in multiple files

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ VITE_DEVICES_ENDPOINT_PATH="/Devices"
 VITE_ZONES_ENDPOINT_PATH="/Zones"
 VITE_PERSONALIZATION_ENDPOINT_PATH="/personalization"
 VITE_SUSCRIPTION_PATH="/suscription"
+// END OF .ENV FILE
