--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.4.1",
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.5.1",
     "feather-icons": "^4.29.2",
     "i18n": "^0.15.3",
     "json": "^11.0.0",
@@ -20,6 +20,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.4.0",
     "vue": "^3.5.21",
+    "vue-chartjs": "^5.3.3",
     "vue-i18n": "^11.1.12",
     "vue-router": "^4.5.1"
   },
