feat(hotfix-profile): fix settings

--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ VITE_DEVICES_ENDPOINT_PATH="/Devices"
 VITE_ZONES_ENDPOINT_PATH="/Zones"
 VITE_PERSONALIZATION_ENDPOINT_PATH="/personalization"
 VITE_SUSCRIPTION_PATH="/suscription"
+VITE_PROFILE_ENDPOINT_PATH="/Profile"
 // END OF .ENV FILE
