feat(admin): implement admin panel with health check, analytics, and audit logs

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL="https://backend-energix.onrender.com/api/v1"
+VITE_API_BASE_URL="http://localhost:5045/api/v1"
 
 VITE_AUTH_ENDPOINT_PATH="/authentication"
 VITE_USERS_ENDPOINT_PATH="/users"
@@ -6,4 +6,11 @@ VITE_CODES_ENDPOINT_PATH="/codes"
 VITE_CODES_CHECK_PATH="/codes"
 VITE_DEVICES_ENDPOINT_PATH="/devices"
 VITE_ZONES_ENDPOINT_PATH="/zones"
+
+# Admin endpoints
+VITE_ADMIN_ENDPOINT_PATH="/admin"
+VITE_ADMIN_AUTH_ENDPOINT_PATH="/admin/auth"
+VITE_ADMIN_DASHBOARD_ENDPOINT_PATH="/admin/dashboard"
+VITE_ADMIN_AUDIT_ENDPOINT_PATH="/admin/audit"
+VITE_ADMIN_HEALTH_ENDPOINT_PATH="/admin/health"
 
