--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL="https://backend-energix.onrender.com/api/v1"
+VITE_API_BASE_URL="https://localhost:5045/api/v1"
 
 VITE_AUTH_ENDPOINT_PATH="/authentication"
 VITE_USERS_ENDPOINT_PATH="/users"
@@ -9,4 +9,11 @@ VITE_ZONES_ENDPOINT_PATH="/Zones"
 VITE_PERSONALIZATION_ENDPOINT_PATH="/personalization"
 VITE_SUSCRIPTION_PATH="/suscription"
 VITE_PROFILE_ENDPOINT_PATH="/Profile"
+VITE_ADMIN_ENDPOINT_PATH="/admin"
+VITE_ADMIN_AUTH_ENDPOINT_PATH="/admin/auth"
+VITE_ADMIN_DASHBOARD_ENDPOINT_PATH="/admin/dashboard"
+VITE_ADMIN_AUDIT_ENDPOINT_PATH="/admin/audit"
+VITE_ADMIN_HEALTH_ENDPOINT_PATH="/admin/health"
 // END OF .ENV FILE
+
+
