--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ VITE_CODES_ENDPOINT_PATH="/codes"
 VITE_CODES_CHECK_PATH="/codes"
 VITE_DEVICES_ENDPOINT_PATH="/Devices"
 VITE_ZONES_ENDPOINT_PATH="/Zones"
+VITE_ALERTS_ENDPOINT_PATH="/alerts"
 VITE_PERSONALIZATION_ENDPOINT_PATH="/personalization"
 VITE_SUSCRIPTION_PATH="/suscription"
 VITE_PROFILE_ENDPOINT_PATH="/Profile"
