--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL="https://localhost:5045/api/v1"
+VITE_API_BASE_URL="https://backend-energix.onrender.com/api/v1"
 
 VITE_AUTH_ENDPOINT_PATH="/authentication"
 VITE_USERS_ENDPOINT_PATH="/users"
